# Chokepoint

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  Makefile  README.md  SETUP.md  main.py  pygbag.ini  pyproject.toml  requirements.txt  serve_native.py  serve_web.py
.github/workflows/: pages.yml
src/chokepoint/: __init__.py  __main__.py  arsenal.py  codebuffer.py  economy.py  editor.py  gates.py  glossary.py  hints.py  lessons.py  limiter.py  llm_assist.py  loadout.py  maps.py  metrics.py  packets.py  parsers.py  render.py  safety.py  scores.py  simulation.py  syntax.py  tutorial.py
src/factory_defense/: __init__.py  __main__.py  arsenal.py  editor.py  maps.py  packets.py  render.py  simulation.py
tests/: test_arsenal.py  test_codebuffer.py  test_content.py  test_economy.py  test_editor.py  test_gates.py  test_glossary.py  test_hints.py  test_lessons.py  test_limiter.py  test_metrics.py  test_parsers.py  test_safety.py  test_scores.py  test_simulation.py  test_syntax.py  test_topology.py  test_tutorial.py  test_waves.py
web/: app.js  index.html  style.css  webgame.py
