[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-defense"
version = "0.1.0"
description = "A programmable tower-defense logistics game for learning Python: queueing, rate limiting, backpressure, and triage."
requires-python = ">=3.11"
dependencies = ["pygame>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
factory-defense = "factory_defense.render:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes, pycodestyle, bugbear, isort, and a few security-minded checks.
select = ["E", "F", "W", "B", "I", "UP", "S"]
# S101 (assert) is fine in tests; the in-game exec is intentional and contained.
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # pygame ships no stubs
check_untyped_defs = true
