[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chokepoint"
version = "0.1.0"
description = "A typed-alert tower-defense for learning Python: typed routing, consumer coverage, queueing, rate limiting, and backpressure."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joshualytle" }]
keywords = ["game", "pygame", "tower-defense", "learning", "python", "alert-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Education",
]
dependencies = ["pygame>=2.6"]

[project.urls]
Homepage = "https://github.com/joshualytle/Chokepoint"
Repository = "https://github.com/joshualytle/Chokepoint"
Issues = "https://github.com/joshualytle/Chokepoint/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
chokepoint = "chokepoint.render:run"

[tool.setuptools]
package-dir = {"" = "src"}
package-data = {"chokepoint" = ["assets/*.ttf"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes, pycodestyle, bugbear, isort, and a few security-minded checks.
select = ["E", "F", "W", "B", "I", "UP", "S"]
# S101 (assert) is fine in tests; the in-game exec is intentional and contained.
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # pygame ships no stubs
check_untyped_defs = true
